# Axum-Backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: lib.rs  main.rs
src/dbs/: connector.rs  error.rs  health.rs  mod.rs  models.rs
src/err/: error.rs
src/svr/: health.rs  mod.rs  models.rs  state.rs
src/svr/health/: aggregator.rs  models.rs
src/sys/: init.rs  mod.rs
src/sys/config/: server.rs  state.rs
src/sys/env/: error.rs  loader.rs  mod.rs
src/sys/health/: aggregator.rs  components.rs  mod.rs
src/sys/log/: config.rs  init.rs  mod.rs  models.rs
